2005-05-30	Benedikt Meurer <benny@xfce.org>
	* exo/Makefile.am: We don't use D-Bus any longer, so no need to keep
	  that define around.
	* configure.ac, acinclude.m4, java/, Makefile.am: Add experimental
	  Java bindings (very incomplete).




(Old svn revision: 16578)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,9 +2,12 @@ if HAVE_PYTHON
 PYTHON_SUBDIR=python
 endif
 
+JAVA_SUBDIR=java
+
 SUBDIRS =								\
 	exo								\
 	docs								\
+	$(JAVA_SUBDIR)							\
 	po								\
 	$(PYTHON_SUBDIR)
 
