--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,4 +1,6 @@
+exo-csource/main.c
 exo/exo-binding.c
+exo/exo-cell-renderer-ellipsized-text.c
 exo/exo-config.c
 exo/exo-ellipsized-label.c
 exo/exo-gdk-pixbuf-extensions.c
@@ -6,8 +8,9 @@ exo/exo-gobject-extensions.c
 exo/exo-gtk-extensions.c
 exo/exo-icon-bar.c
 exo/exo-icon-view.c
-exo/exo-marshal.c
 exo/exo-md5.c
+exo/exo-mime-database.c
+exo/exo-mime-info.c
 exo/exo-pango-extensions.c
 exo/exo-private.c
 exo/exo-string.c
@@ -16,3 +19,4 @@ exo/exo-toolbars-editor.c
 exo/exo-toolbars-model.c
 exo/exo-toolbars-private.c
 exo/exo-toolbars-view.c
+exo/exo-xsession-client.c
