--- a/exo/exo-0.3.pc.in
+++ b/exo/exo-0.3.pc.in
@@ -3,9 +3,12 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
+exo_api_version=@LIBEXO_VERSION_API@
+exo_csource=exo-csource
+
 Name: @PACKAGE_TARNAME@
 Description: Extension library for Xfce
 Requires: libxfcegui4-1.0
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lexo-@LIBEXO_VERSION_API@
-Cflags: -I${includedir}/exo-@LIBEXO_VERSION_API@
+Libs: -L${libdir} -lexo-${exo_api_version}
+Cflags: -I${includedir}/exo-${exo_api_version}
