--- a/configure.in.in
+++ b/configure.in.in
@@ -23,6 +23,7 @@ Written by Benedikt Meurer <benny@xfce.org>.])
 AC_INIT([exo], [libexo_version()], [benny@xfce.org])
 AC_PREREQ([2.50])
 AC_REVISION([$Id$])
+AC_CANONICAL_HOST()
 
 dnl Initialize automake
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
@@ -49,14 +50,15 @@ AC_ISC_POSIX()
 AC_MINIX()
 
 dnl check for basic programs
+AM_PROG_AS()
 AC_PROG_CC()
 AC_PROG_INSTALL()
 AC_PROG_LIBTOOL()
 
 dnl check for standard header files
 AC_HEADER_STDC()
-AC_CHECK_HEADERS([errno.h fcntl.h libintl.h locale.h math.h md5.h string.h \
-                  sys/resource.h sys/stat.h sys/time.h sys/types.h \
+AC_CHECK_HEADERS([assert.h errno.h fcntl.h libintl.h locale.h math.h md5.h \
+                  string.h sys/resource.h sys/stat.h sys/time.h sys/types.h \
                   time.h])
 
 dnl check for Message Digest functions
@@ -77,9 +79,6 @@ XDT_CHECK_LIBX11_REQUIRE()
 
 dnl Check for gtk-doc
 GTK_DOC_CHECK([1.0])
-
-dnl Check for debugging support
-BM_DEBUG_SUPPORT()
 
 dnl Check for python (optional)
 AC_ARG_ENABLE([python], 
@@ -133,6 +132,41 @@ if test x"$enable_python" != x"no"; then
   fi
 fi
 AM_CONDITIONAL([HAVE_PYTHON], [test x"$have_python" = x"yes"])
+
+dnl Check for debugging support
+AC_ARG_ENABLE([debug], AC_HELP_STRING([--disable-debug], [Disable debugging support]), [], [enable_debug=no])
+AC_MSG_CHECKING([whether to enable debugging support])
+if test x"$enable_debug" != x"no"; then
+  CFLAGS="$CFLAGS -O0 -g3 -DG_DISABLE_DEPRECATED -Werror -Wall"
+  AC_MSG_RESULT([yes])
+else
+  CPPFLAGS="$CPPFLAGS -DG_DISABLE_ASSERT -DG_DISABLE_CAST_CHECKS -DG_DISABLE_CHECKS"
+  AC_MSG_RESULT([no])
+
+  AC_MSG_CHECKING([whether $LD accepts -O1])
+  case `$LD -O1 -v 2>&1 </dev/null` in
+  *GNU* | *'with BFD'*)
+    LDFLAGS="$LDFLAGS -Wl,-O1"
+    AC_MSG_RESULT([yes])
+    ;;
+  *)
+    AC_MSG_RESULT([no])
+    ;;
+  esac
+
+  dnl check for target platform
+  AC_MSG_CHECKING([for target platform])
+  case "$host_cpu" in
+  i386|i486|i586|i686|i786|k6|k7)
+    AC_MSG_RESULT([i386])
+    exo_cpu_i386=yes
+    ;;
+  *)
+    AC_MSG_RESULT([unknown])
+    ;;
+  esac
+fi
+AM_CONDITIONAL([EXO_CPU_I386], [test x"$exo_cpu_i386" = x"yes"])
 
 AC_OUTPUT([
 Makefile
