2005-08-14	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Add fi translations to XDT_I18N().
	* po/POTFILES.in: Add missing source files.




(Old svn revision: 16890)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,8 @@ exo/exo-icon-view.c
 exo/exo-md5.c
 exo/exo-mime-database.c
 exo/exo-mime-info.c
+exo/exo-object.c
+exo/exo-object-generic.c
 exo/exo-pango-extensions.c
 exo/exo-private.c
 exo/exo-string.c
