--- a/configure.in.in
+++ b/configure.in.in
@@ -66,7 +66,7 @@ AC_SEARCH_LIBS([MD5Init], [md c], \
                [AC_DEFINE([HAVE_MD5INIT], [1], [Define if MD5Init present])])
 
 dnl Check for i18n support
-XDT_I18N([de en_GB es fr ja],
+XDT_I18N([de en_GB es fi fr ja],
          [libexo-libexo_version_major().libexo_version_minor()])
 
 dnl Check for required packages
