2005-08-18	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.{c,h}, docs/reference/tmpl/exo-icon-view.sgml:
	  Import the new ExoIconView class, which provides a compatible
	  interface to the GtkIconView class in Gtk+ 2.8 (using cell
	  renderers instead of hardcoding the renderering in the icon
	  view). The icon view should be faster now, especially the
	  rubberband painting should be atleast twice as fast (given that
	  you don't use Gtk+ 2.8 with Cairo).
	* exo/exo-mime-database.{c,h}, exo/exo-mime-info.{c,h},
	  exo/xdgmime/, exo/Makefile.am, configure.in.in, exo/exo.h,
	  po/POTFILES.in: Remove the MIME database implementation, as
	  ThunarVFS contains a thread-safe replacement now.
	* configure.in.in, exo/, python/: Use ELF visibility if supported
	  by the compiler and the linker.
	* exo/: Fix several signedness warnings produced by gcc41.
	* python/: Remove the MIME implementation from the Python bindings
	  and add the new icon view methods.
	* po/libexo-0.3.pot: Ditch autogenerated file.
	* exo-csource/Makefile.am: Build the exo-csource tool on 'gmake
	  distcheck', as it's required to successfully 'gmake distcheck'
	  in tests/.




(Old svn revision: 17008)

--- a/exo-csource/Makefile.am
+++ b/exo-csource/Makefile.am
@@ -20,4 +20,7 @@ exo_csource_LDFLAGS =							\
 exo_csource_LDADD =							\
 	$(GLIB_LIBS)
 
+# require to make dist in tests/
+dist-hook: all
+
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
