--- a/configure.in.in
+++ b/configure.in.in
@@ -6,7 +6,9 @@ dnl
 dnl Written by Benedikt Meurer <benny@xfce.org>.
 dnl
 
-dnl Version information
+dnl ***************************
+dnl *** Version information ***
+dnl ***************************
 m4_define([libexo_verinfo], [0:0:0])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
@@ -15,7 +17,9 @@ m4_define([libexo_version_build], [r@REVISION@])
 m4_define([libexo_version_tag], [svn])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_tag(), [], [], [libexo_version_tag()-libexo_version_build()])])
 
-dnl Initialize autoconf
+dnl ***************************
+dnl *** Initialize autoconf ***
+dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2004-2005 os-cillation.
 All rights reserved.
         
@@ -23,18 +27,24 @@ Written by Benedikt Meurer <benny@xfce.org>.])
 AC_INIT([exo], [libexo_version()], [benny@xfce.org])
 AC_PREREQ([2.50])
 AC_REVISION([$Id$])
-AC_CANONICAL_HOST()
+AC_CANONICAL_TARGET()
 
-dnl Initialize automake
+dnl ***************************
+dnl *** Initialize automake ***
+dnl ***************************
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
 AM_CONFIG_HEADER([config.h])
 AM_MAINTAINER_MODE()
 
-dnl libtool versioning
+dnl **************************
+dnl *** Libtool versioning ***
+dnl **************************
 LIBEXO_VERINFO=libexo_verinfo()
 AC_SUBST([LIBEXO_VERINFO])
 
-dnl Subst libexo version
+dnl ****************************
+dnl *** Subst libexo version ***
+dnl ****************************
 LIBEXO_VERSION_MAJOR=libexo_version_major()
 LIBEXO_VERSION_MINOR=libexo_version_minor()
 LIBEXO_VERSION_MICRO=libexo_version_micro()
@@ -44,43 +54,62 @@ AC_SUBST([LIBEXO_VERSION_MINOR])
 AC_SUBST([LIBEXO_VERSION_MICRO])
 AC_SUBST([LIBEXO_VERSION_API])
 
-dnl check for UNIX variants
+dnl *******************************
+dnl *** Check for UNIX variants ***
+dnl *******************************
 AC_AIX()
 AC_ISC_POSIX()
 AC_MINIX()
 
-dnl check for basic programs
+dnl ********************************
+dnl *** Check for basic programs ***
+dnl ********************************
 AM_PROG_AS()
 AC_PROG_CC()
 AC_PROG_INSTALL()
 AC_PROG_LIBTOOL()
+AC_CHECK_PROGS([PERL], [perl5 perl])
 
-dnl check for standard header files
+dnl ***************************************
+dnl *** Check for standard header files ***
+dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h libintl.h locale.h math.h md5.h \
                   string.h sys/resource.h sys/stat.h sys/time.h sys/types.h \
                   time.h])
 
-dnl check for Message Digest functions
+dnl ******************************************
+dnl *** Check for Message Digest functions ***
+dnl ******************************************
 AC_SEARCH_LIBS([MD5Init], [md c], \
                [AC_DEFINE([HAVE_MD5INIT], [1], [Define if MD5Init present])])
 
-dnl Check for i18n support
+dnl ******************************
+dnl *** Check for i18n support ***
+dnl ******************************
 XDT_I18N([de en_GB es fi fr ja],
          [libexo-libexo_version_major().libexo_version_minor()])
 
-dnl Check for required packages
+dnl ***********************************
+dnl *** Check for required packages ***
+dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.4.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.4.0])
 XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.2.0])
 
-dnl Check for X11 libraries
+dnl *******************************
+dnl *** Check for X11 libraries ***
+dnl *******************************
 XDT_CHECK_LIBX11_REQUIRE()
 
-dnl Check for gtk-doc
+dnl *************************
+dnl *** Check for gtk-doc ***
+dnl *************************
 GTK_DOC_CHECK([1.0])
 
-dnl Check for python (optional)
+dnl ***********************************
+dnl *** Check for python (optional) ***
+dnl ***********************************
 AC_ARG_ENABLE([python], 
   [AC_HELP_STRING([--enable-python], [build python bindings])],
   [enable_python=$enableval],
@@ -133,7 +162,9 @@ if test x"$enable_python" != x"no"; then
 fi
 AM_CONDITIONAL([HAVE_PYTHON], [test x"$have_python" = x"yes"])
 
-dnl Check for debugging support
+dnl ***********************************
+dnl *** Check for debugging support ***
+dnl ***********************************
 AC_ARG_ENABLE([debug], AC_HELP_STRING([--disable-debug], [Disable debugging support]), [], [enable_debug=no])
 AC_MSG_CHECKING([whether to enable debugging support])
 if test x"$enable_debug" != x"no"; then
@@ -159,14 +190,53 @@ else
   case "$host_cpu" in
   i386|i486|i586|i686|i786|k6|k7)
     AC_MSG_RESULT([i386])
-    exo_cpu_i386=yes
+    AC_DEFINE([EXO_CPU_I386], [1], [Define to 1 if target cpu is i386])
     ;;
   *)
     AC_MSG_RESULT([unknown])
     ;;
   esac
 fi
-AM_CONDITIONAL([EXO_CPU_I386], [test x"$exo_cpu_i386" = x"yes"])
+
+dnl ****************************************
+dnl *** Check for ELF visibility support ***
+dnl ****************************************
+AC_ARG_ENABLE([visibility], AC_HELP_STRING([--disable-visibility], [Don't use ELF visibility attributes]), [], [enable_visibility=yes])
+have_gnuc_visibility=no
+if test x"$enable_visibility" != x"no"; then
+  dnl Check whether the compiler supports the visibility attribute
+  AC_MSG_CHECKING([whether $CC supports the GNUC visibility attribute])
+  AC_COMPILE_IFELSE(AC_LANG_SOURCE(
+  [
+    void __attribute__ ((visibility("default"))) test_default (void) {}
+    void __attribute__ ((visibility("hidden"))) test_hidden (void) {}
+    int main (int argc, char **argv) { test_default (); test_hidden (); return 0; }
+  ]),
+  [
+    AC_MSG_RESULT([yes])
+    dnl Check if the compiler supports -fvisibility=hidden
+    save_CFLAGS="$CFLAGS"
+    CFLAGS="$CFLAGS -fvisibility=hidden"
+    AC_MSG_CHECKING([whether $CC accepts -fvisibility=hidden])
+    AC_COMPILE_IFELSE(AC_LANG_SOURCE([int x;]),
+    [
+      have_gnuc_visibility=yes
+      AC_MSG_RESULT([yes])
+    ],
+    [
+      AC_MSG_RESULT([no])
+    ])
+    CFLAGS="$save_CFLAGS"
+  ],
+  [
+    AC_MSG_RESULT([no])
+  ])
+fi
+if test x"$have_gnuc_visibility" = x"yes"; then
+  CFLAGS="$CFLAGS -fvisibility=hidden"
+  CPPFLAGS="$CPPFLAGS -DHAVE_GNUC_VISIBILITY"
+fi
+AM_CONDITIONAL([HAVE_GNUC_VISIBILITY], [test x"$have_gnuc_visibility" = x"yes"])
 
 AC_OUTPUT([
 Makefile
@@ -177,7 +247,6 @@ docs/reference/version.xml
 exo/Makefile
 exo/exo-0.3.pc
 exo/exo-config.h
-exo/xdgmime/Makefile
 exo-csource/Makefile
 po/Makefile.in
 python/Makefile
