2005-08-19	Benedikt Meurer <benny@xfce.org>
	* configure.in.in, exo/exo-xsession-client.c: Drop dependency on X11.
	  Acts as a dummy on other GDK targets.
	* configure.in.in, docs/reference/Makefile.am, exo/Makefile.am,
	  exo/exo-0.3.pc.in, exo/exo.h, python/Makefile.am, tests/Makefile.am:
	  Drop unnecessary dependency on libxfcegui4.




(Old svn revision: 17011)

--- a/configure.in.in
+++ b/configure.in.in
@@ -95,12 +95,7 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.4.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.4.0])
-XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.2.0])
-
-dnl *******************************
-dnl *** Check for X11 libraries ***
-dnl *******************************
-XDT_CHECK_LIBX11_REQUIRE()
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.2.0])
 
 dnl *************************
 dnl *** Check for gtk-doc ***
