2005-08-19	Benedikt Meurer <benny@xfce.org>
	* python/Makefile.am: Fix indentation.
	* configure.in.in: Enable debugging by default when building from a
	  SVN sandbox. Disable debugging by default when building a release.
	* TODO: Remove obsolete items.
	* HACKING: Fix repository URLs and file names.
	* NEWS: Collect atleast the most important changes.
	* po/: Run 'gmake update-po'.




(Old svn revision: 17025)

--- a/configure.in.in
+++ b/configure.in.in
@@ -160,7 +160,10 @@ AM_CONDITIONAL([HAVE_PYTHON], [test x"$have_python" = x"yes"])
 dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
-AC_ARG_ENABLE([debug], AC_HELP_STRING([--disable-debug], [Disable debugging support]), [], [enable_debug=no])
+AC_ARG_ENABLE([debug],
+AC_HELP_STRING([--enable-debug], [Enable debugging support])
+AC_HELP_STRING([--disable-debug], [Disable debugging support]),
+  [], [ifelse(libexo_version_tag(), [], [enable_debug=no], [enable_debug=yes])])
 AC_MSG_CHECKING([whether to enable debugging support])
 if test x"$enable_debug" != x"no"; then
   CFLAGS="$CFLAGS -O0 -g3 -DG_DISABLE_DEPRECATED -Werror -Wall"
