2005-10-17	Benedikt Meurer <benny@xfce.org>
	* exo/exo-noop.{c,h}, exo/exo-utils.{c,h}, exo/Makefile.am, exo/exo.h,
	  exo/exo.symbols: Move the exo_noop_* functions to exo-utils.
	* exo/exo-utils.h: Add exo_atomic_* inline functions.




(Old svn revision: 18321)

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -19,13 +19,13 @@ libexo_headers =							\
 	exo-icon-bar.h							\
 	exo-icon-view.h							\
 	exo-md5.h							\
-	exo-noop.h							\
 	exo-pango-extensions.h						\
 	exo-string.h							\
 	exo-toolbars-editor.h						\
 	exo-toolbars-editor-dialog.h					\
 	exo-toolbars-model.h						\
 	exo-toolbars-view.h						\
+	exo-utils.h							\
 	exo-xsession-client.h
 
 libexo_built_public_sources =						\
@@ -60,7 +60,6 @@ libexo_0_3_la_SOURCES =							\
 	exo-icon-bar.c							\
 	exo-icon-view.c							\
 	exo-md5.c							\
-	exo-noop.c							\
 	exo-pango-extensions.c						\
 	exo-private.c							\
 	exo-private.h							\
@@ -71,6 +70,7 @@ libexo_0_3_la_SOURCES =							\
 	exo-toolbars-private.c						\
 	exo-toolbars-private.h						\
 	exo-toolbars-view.c						\
+	exo-utils.c							\
 	exo-xsession-client.c
 
 libexo_0_3_la_CFLAGS =							\
