2005-10-27	Benedikt Meurer <benny@xfce.org>
	* exo/abicheck.sh, exo/exo-utils.{c,h}, exo/exo.symbols: Include
	  implementations for the exo_atomic_* functions and add them to the
	  exported interface of the library.
	* configure.in.in: Don't use -fvisibility=hidden, as it causes trouble
	  with the extern inline functions.
	* exo/exo-private.h, exo/exo-toolbars-private.h, python/exo.override,
	  python/exomodule.c: Mark internal symbols with G_GNUC_INTERNAL.
	* docs/reference/exo-docs.sgml, docs/reference/exo-sections.txt,
	  docs/reference/tmpl/exo-utils.sgml: Add the exo-utils to the reference
	  documentation.
	* docs/reference/tmpl/exo-config.sgml: Mark the config interface as
	  Stable.
	* exo/exo-config.{c,h.in}, exo/exo.symbols,
	  docs/reference/exo-sections.txt: Add exo_check_version() to support
	  runtime version checks.
	* exo/exo.symbols, exo/abicheck.sh: Use special handling for exported
	  variables.




(Old svn revision: 18442)

--- a/exo/exo-config.h.in
+++ b/exo/exo-config.h.in
@@ -47,6 +47,10 @@ extern const guint exo_major_version;
 extern const guint exo_minor_version;
 extern const guint exo_micro_version;
 
+const gchar *exo_check_version (guint required_major,
+                                guint required_minor,
+                                guint required_micro);
+
 /* with newer GObject versions it's possible to avoid the unnecessary
  * copying of the name, nick and blurb settings for GParamSpec's.
  */
