2005-11-04	Benedikt Meurer <benny@xfce.org>
	* exo/Makefile.am, exo/exo.h, exo/exo.symbols, exo/exo-wrap-table.{c,h}:
	  Add new class ExoWrapTable, which provides a container widget with
	  automatic child layouting according to the width allocated to the
	  container.
	* docs/reference/exo-docs.sgml, docs/reference/exo-sections.txt,
	  docs/reference/exo.types, docs/reference/tmpl/exo-wrap-table.sgml:
	  Add API documentation for ExoWrapTable.
	* tests/test-exo-wrap-table.c, tests/Makefile.am: Add a simple test
	  case for ExoWrapTable.
	* po/*.po: Merge new strings.




(Old svn revision: 18621)

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -26,6 +26,7 @@ libexo_headers =							\
 	exo-toolbars-model.h						\
 	exo-toolbars-view.h						\
 	exo-utils.h							\
+	exo-wrap-table.h						\
 	exo-xsession-client.h
 
 libexo_built_public_sources =						\
@@ -71,6 +72,7 @@ libexo_0_3_la_SOURCES =							\
 	exo-toolbars-private.h						\
 	exo-toolbars-view.c						\
 	exo-utils.c							\
+	exo-wrap-table.c						\
 	exo-xsession-client.c
 
 libexo_0_3_la_CFLAGS =							\
