--- a/configure.in.in
+++ b/configure.in.in
@@ -88,7 +88,7 @@ AC_SEARCH_LIBS([MD5Init], [md c], \
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
-XDT_I18N([ca de el en_GB es fi fr ja],
+XDT_I18N([ca de el en_GB es fi fr ja pt_BR],
          [libexo-libexo_version_major().libexo_version_minor()])
 
 dnl ***********************************
