--- a/configure.in.in
+++ b/configure.in.in
@@ -1,6 +1,6 @@
 dnl $Id$
 dnl
-dnl Copyright (c) 2004-2005 os-cillation.
+dnl Copyright (c) 2004-2006 os-cillation.
 dnl All rights reserved.
 dnl
 dnl Written by Benedikt Meurer <benny@xfce.org>.
@@ -9,13 +9,13 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-m4_define([libexo_verinfo], [0:1:0])
+m4_define([libexo_verinfo], [1:0:1])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
 m4_define([libexo_version_micro], [1])
-m4_define([libexo_version_nano], [1])
+m4_define([libexo_version_nano], [2])
 m4_define([libexo_version_build], [r@REVISION@])
-m4_define([libexo_version_tag], [svn])
+m4_define([libexo_version_tag], [alpha])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [], [], [libexo_version_tag()-libexo_version_build()])])
 
 dnl ********************************************
@@ -26,7 +26,7 @@ m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [], [minimum], [
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
-AC_COPYRIGHT([Copyright (c) 2004-2005 os-cillation.
+AC_COPYRIGHT([Copyright (c) 2004-2006 os-cillation.
 All rights reserved.
         
 Written by Benedikt Meurer <benny@xfce.org>.])
