2006-01-25	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Drop G_DISABLE_DEPRECATED completely. This fixes
	  bug #1379.
	* exo/exo.h: Make sure i18n stuff is setup properly, so people with
	  older Xfce versions can still build and run Thunar. This fixes
	  bug #1341.




(Old svn revision: 19611)

--- a/configure.in.in
+++ b/configure.in.in
@@ -171,7 +171,7 @@ AC_HELP_STRING([--enable-debug=@<:@no/minimum/yes@:>@], [Turn on debugging @<:@d
   [], [enable_debug=libexo_debug_default])
 AC_MSG_CHECKING([whether to enable debugging support])
 if test x"$enable_debug" = x"yes" -o x"$enable_debug" = x"full"; then
-  CFLAGS="$CFLAGS -O0 -g3 -DG_DISABLE_DEPRECATED -Werror -Wall"
+  CFLAGS="$CFLAGS -O0 -g3 -Werror -Wall"
 else
   CFLAGS="$CFLAGS -DG_DISABLE_CAST_CHECKS"
 
