--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,8 +1,8 @@
-exo-csource/main.c
 exo/exo-binding.c
 exo/exo-cell-renderer-ellipsized-text.c
 exo/exo-config.c
 exo/exo-ellipsized-label.c
+exo/exo-execute.c
 exo/exo-gdk-pixbuf-extensions.c
 exo/exo-gobject-extensions.c
 exo/exo-gtk-extensions.c
@@ -17,6 +17,36 @@ exo/exo-toolbars-editor.c
 exo/exo-toolbars-model.c
 exo/exo-toolbars-private.c
 exo/exo-toolbars-view.c
+exo/exo-url.c
 exo/exo-utils.c
 exo/exo-wrap-table.c
 exo/exo-xsession-client.c
+
+exo-csource/main.c
+
+exo-helper/exo-helper-chooser-dialog.c
+exo-helper/exo-helper-chooser.c
+exo-helper/exo-helper-launcher-dialog.c
+exo-helper/exo-helper-utils.c
+exo-helper/exo-helper.c
+exo-helper/exo-preferred-applications-settings.c
+exo-helper/helpers/Terminal.desktop.in
+exo-helper/helpers/balsa.desktop.in
+exo-helper/helpers/debian-sensible-browser.desktop.in
+exo-helper/helpers/debian-x-terminal-emulator.desktop.in
+exo-helper/helpers/epiphany.desktop.in
+exo-helper/helpers/eterm.desktop.in
+exo-helper/helpers/evolution.desktop.in
+exo-helper/helpers/firefox.desktop.in
+exo-helper/helpers/galeon.desktop.in
+exo-helper/helpers/gnome-terminal.desktop.in
+exo-helper/helpers/kmail.desktop.in
+exo-helper/helpers/konqueror.desktop.in
+exo-helper/helpers/mozilla-browser.desktop.in
+exo-helper/helpers/mozilla-mailer.desktop.in
+exo-helper/helpers/opera-browser.desktop.in
+exo-helper/helpers/opera-mailer.desktop.in
+exo-helper/helpers/thunderbird.desktop.in
+exo-helper/helpers/xterm.desktop.in
+
+exo-open/main.c
