2006-01-31	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Check for fnmatch.h.
	* exo/exo-url.c: Make exo_url_show_on_screen() smarter in guessing the
	  correct application, it is now able to open local HTML files as well
	  if the url refers to a local file.
	* exo-open/main.c(main): Popup an error dialog if an error occurs while
	  trying to execute the preferred application or trying to open one of
	  the specified URLs. This way we can just use it right away from
	  applications/scripts without having to worry about user interaction.




(Old svn revision: 19690)

--- a/configure.in.in
+++ b/configure.in.in
@@ -81,8 +81,8 @@ dnl ***************************************
 dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
-AC_CHECK_HEADERS([assert.h errno.h fcntl.h libintl.h locale.h math.h md5.h \
-                  regex.h string.h sys/resource.h sys/stat.h sys/time.h \
+AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
+                  md5.h regex.h string.h sys/resource.h sys/stat.h sys/time.h \
                   sys/types.h time.h])
 
 dnl ************************************
