2006-02-13	Benedikt Meurer <benny@xfce.org>
	* exo-helper/helpers/Terminal.desktop.in: Add "xfce4-terminal" here to
	  be compatible with Debian/Ubuntu, where no "Terminal" binary is avail-
	  able, instead the binary (and the package) is named "xfce4-terminal".




(Old svn revision: 19859)

--- a/exo-helper/helpers/Terminal.desktop.in
+++ b/exo-helper/helpers/Terminal.desktop.in
@@ -5,7 +5,7 @@ Icon=Terminal
 Type=X-XFCE-Helper
 _Name=Xfce Terminal
 StartupNotify=true
-X-XFCE-Binaries=Terminal;xterminal;
+X-XFCE-Binaries=Terminal;xterminal;xfce4-terminal;
 X-XFCE-Category=TerminalEmulator
 X-XFCE-Commands=%B;
 X-XFCE-CommandsWithParameter=%B -x %s;
