2006-02-24	Benedikt Meurer <benny@xfce.org>
	* docs/manual/, Makefile.am, configure.in.in, docs/Makefile.am,
	  exo-helper/exo-helper-chooser-dialog.c,
	  exo-helper/exo-helper-launcher-dialog.c: Add initial user manual for
	  the preferred applications framework, and connect the "Help" buttons
	  to display the manual. Bug #1403.
	* docs/reference/exo-open.xml, docs/reference/Makefile.am: Add initial
	  manpage for exo-open.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.




(Old svn revision: 20037)

--- a/docs/manual/Makefile.am
+++ b/docs/manual/Makefile.am
@@ -1,7 +1,9 @@
 # $Id$
 
 SUBDIRS =								\
-	manual								\
-	reference
+	C
+
+EXTRA_DIST =								\
+	xfce-nochunk.xsl
 
 # vi:set ts=8 sw=8 noet ai nocindent:
