--- a/Makefile.am
+++ b/Makefile.am
@@ -47,6 +47,6 @@ DISTCLEANFILES =							\
 	intltool-merge							\
 	intltool-update
 
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --enable-xsltproc
 
 # vi:set ts=8 sw=8 noet ai nocindent:
