--- a/configure.in.in
+++ b/configure.in.in
@@ -175,6 +175,18 @@ if test x"$enable_python" != x"no"; then
 fi
 AM_CONDITIONAL([HAVE_PYTHON], [test x"$have_python" = x"yes"])
 
+dnl **************************
+dnl *** Check for xsltproc ***
+dnl **************************
+AC_ARG_ENABLE([xsltproc], [AC_HELP_STRING([--enable-xsltproc], [Use xsltproc to build documentation [default=no]])],, [enable_xsltproc=no])
+if test x"$enable_xsltproc" = x"yes"; then
+  AC_PATH_PROG([XSLTPROC], [xsltproc], [no])
+  if test x"$XSLTPROC" = x"no"; then
+    enable_xsltproc=no
+  fi
+fi
+AM_CONDITIONAL([ENABLE_XSLTPROC], [test x"$enable_xsltproc" = x"yes"])
+
 dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
@@ -241,6 +253,10 @@ AC_OUTPUT([
 Makefile
 exo.spec
 docs/Makefile
+docs/manual/Makefile
+docs/manual/C/Makefile
+docs/manual/C/exo-preferred-applications.xml
+docs/manual/C/images/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
 exo/Makefile
