2006-02-26	Benedikt Meurer <benny@xfce.org>
	* exo/exo-tree-view.{c,h}, exo/Makefile.am, exo/exo.h, exo/exo.symbols:
	  Add ExoTreeView which derives from GtkTreeView and extends it with
	  single-click support and also works around the GtkTreeView limitation
	  of dragging multiple files.
	* docs/references/: Update the API documentation.
	* po/POTFILES.in: Add exo-tree-view.c here.
	* po/libexo-0.3.pot, po/*.po: Update translations.




(Old svn revision: 20084)

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -28,6 +28,7 @@ libexo_headers =							\
 	exo-toolbars-editor-dialog.h					\
 	exo-toolbars-model.h						\
 	exo-toolbars-view.h						\
+	exo-tree-view.h							\
 	exo-url.h							\
 	exo-utils.h							\
 	exo-wrap-table.h						\
@@ -76,6 +77,7 @@ libexo_0_3_la_SOURCES =							\
 	exo-toolbars-private.c						\
 	exo-toolbars-private.h						\
 	exo-toolbars-view.c						\
+	exo-tree-view.c							\
 	exo-url.c							\
 	exo-utils.c							\
 	exo-wrap-table.c						\
