--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,6 +17,7 @@ exo/exo-toolbars-editor.c
 exo/exo-toolbars-model.c
 exo/exo-toolbars-private.c
 exo/exo-toolbars-view.c
+exo/exo-tree-view.c
 exo/exo-url.c
 exo/exo-utils.c
 exo/exo-wrap-table.c
