--- a/configure.in.in
+++ b/configure.in.in
@@ -13,9 +13,9 @@ m4_define([libexo_verinfo], [2:0:2])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
 m4_define([libexo_version_micro], [1])
-m4_define([libexo_version_nano], [4])
+m4_define([libexo_version_nano], [5])
 m4_define([libexo_version_build], [r@REVISION@])
-m4_define([libexo_version_tag], [alpha2])
+m4_define([libexo_version_tag], [svn])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [], [], [libexo_version_tag()-libexo_version_build()])])
 
 dnl ********************************************
