2006-03-11	Benedikt Meurer <benny@xfce.org>
	* exo-helper/helpers/sylpheed-claws.desktop.in,
	  exo-helper/helpers/Makefile.am: Add Sylpheed Claws as MailReader to
	  the helper list. Thanks to Bernhard Walle <bernhard.walle@gmx.de>.




(Old svn revision: 20337)

--- a/exo-helper/helpers/Makefile.am
+++ b/exo-helper/helpers/Makefile.am
@@ -21,6 +21,7 @@ desktop_in_files =							\
 	mozilla-mailer.desktop.in					\
 	opera-browser.desktop.in					\
 	opera-mailer.desktop.in						\
+	sylpheed-claws.desktop.in					\
 	thunderbird.desktop.in						\
 	xterm.desktop.in
 desktop_DATA =								\
