2006-04-05	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Do not depend on Xfce 4.2.2, as 4.2.1 will also do.
	* configure.in.in: Solaris has MD5 functions in libmd5.
	* exo/exo-toolbars-editor-dialog.c
	  (exo_toolbars_editor_dialog_add_toolbar): Fix format warning.
	* exo/exo-xsession-client.c(exo_xsession_client_set_group): Use
	  memcpy() instead of bcopy().
	* docs/reference/exo-open.xml: Fix typo.




(Old svn revision: 20759)

--- a/configure.in.in
+++ b/configure.in.in
@@ -93,7 +93,7 @@ AC_CHECK_FUNCS([regexec])
 dnl ******************************************
 dnl *** Check for Message Digest functions ***
 dnl ******************************************
-AC_SEARCH_LIBS([MD5Init], [md c], \
+AC_SEARCH_LIBS([MD5Init], [md5 md c], \
                [AC_DEFINE([HAVE_MD5INIT], [1], [Define if MD5Init present])])
 
 dnl ******************************
@@ -106,12 +106,12 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.6.4])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.6.0])
-XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.2.2])
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.2.1])
 
 dnl *********************************************
 dnl *** Check for xfce-mcs-manager (optional) ***
 dnl *********************************************
-XDT_CHECK_OPTIONAL_PACKAGE([XFCE_MCS_MANAGER], [xfce-mcs-manager], [4.2.2],
+XDT_CHECK_OPTIONAL_PACKAGE([XFCE_MCS_MANAGER], [xfce-mcs-manager], [4.2.1],
                            [mcs-plugin], [xfce-mcs-manager], [yes])
 
 dnl *************************
