2006-04-11	Benedikt Meurer <benny@xfce.org>
	* python/: Update the Python bindings, including exo-url, exo-execute
	  and exo-binding. Update the Python examples.




(Old svn revision: 20842)

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -35,7 +35,9 @@ _exo_la_LIBADD =							\
 	$(LIBXFCE4UTIL_LIBS)
 
 _exo_la_SOURCES =							\
-	exomodule.c
+	exomodule.c							\
+	pyexo.h								\
+	pyexobinding.c
 
 nodist__exo_la_SOURCES =						\
 	exo.c
