2006-04-16	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Check for sys/wait.h.
	* exo-helper/exo-helper.c: Properly retry with the remaining commands
	  if a command returns with an error within 5 seconds. This finally
	  fixes the issues with Firefox.




(Old svn revision: 20958)

--- a/configure.in.in
+++ b/configure.in.in
@@ -83,7 +83,7 @@ dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
                   md5.h mmintrin.h regex.h string.h sys/resource.h sys/stat.h \
-                  sys/time.h sys/types.h time.h])
+                  sys/time.h sys/types.h sys/wait.h time.h])
 
 dnl ************************************
 dnl *** Check for standard functions ***
