2006-05-06	Benedikt Meurer <benny@xfce.org>
	* Makefile.am: Add --enable-xml2po to DISTCHECK_CONFIGURE_FLAGS.
	* exo-helper/exo-helper-launcher-dialog.c: Drop the "Help" button from
	  the launcher dialog.
	* Makefile.am, configure.in.in, exo-support/: Import XfceHeading and
	  XfceTitledDialog from libxfcegui4 to use by the tools in this package
	  without readding the dependency on libxfcegui4.
	* exo-helper/Makefile.am, exo-helper/exo-helper-chooser-dialog.c,
	  exo-helper/exo-helper-utils.{c,h}: Use XfceTitledDialog as superclass
	  for ExoHelperChooserDialog.
	* po/libexo-0.3.pot, po/*.po: Updated.
	* po/de.po: Update the german translations.




(Old svn revision: 21530)

--- a/configure.in.in
+++ b/configure.in.in
@@ -281,6 +281,7 @@ exo-csource/Makefile
 exo-helper/Makefile
 exo-helper/helpers/Makefile
 exo-open/Makefile
+exo-support/Makefile
 icons/Makefile
 icons/48x48/Makefile
 po/Makefile.in
