--- a/icons/48x48/Makefile.am
+++ b/icons/48x48/Makefile.am
@@ -2,6 +2,8 @@
 
 iconsdir = $(datadir)/icons/hicolor/48x48/apps
 icons_DATA =								\
+	applications-internet.png					\
+	applications-other.png						\
 	preferences-desktop-default-applications.png
 
 EXTRA_DIST =								\
