--- a/configure.in.in
+++ b/configure.in.in
@@ -107,6 +107,7 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.6.4])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.6.0])
+XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.6.4])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.2.2])
 
 dnl *********************************************
@@ -278,6 +279,7 @@ exo/Makefile
 exo/exo-0.3.pc
 exo/exo-config.h
 exo-csource/Makefile
+exo-desktop-item-edit/Makefile
 exo-helper/Makefile
 exo-helper/helpers/Makefile
 exo-open/Makefile
