--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,6 +25,11 @@ exo/exo-xsession-client.c
 
 exo-csource/main.c
 
+exo-desktop-item-edit/exo-die-command-entry.c
+exo-desktop-item-edit/exo-die-editor.c
+exo-desktop-item-edit/exo-die-enum-types.c
+exo-desktop-item-edit/main.c
+
 exo-helper/exo-helper-chooser-dialog.c
 exo-helper/exo-helper-chooser.c
 exo-helper/exo-helper-launcher-dialog.c
